--- a/src/Makefile-client.am
+++ b/src/Makefile-client.am
@@ -47,7 +47,8 @@ bash_completion_DATA += \
 
 bin_SCRIPTS += \
 	ceph-rbdnamer \
-	rbd-replay-many
+	rbd-replay-many \
+        rbdmap
 
 python_PYTHON += pybind/rbd.py
 
