rbdmap: Move do_map and do_unmap shell functions to rbdmap script
This patch creates rbdmap shell script that is called from init-rbdmap
init script. The patch also renames src/rbdmap configuration file to
src/etc-rbdmap so that rbdmap shell script can be installed via build
system directly. Finally, the patch accomodates these changes in spec
file and build system.

Fixes: #13374
Signed-off-by: Boris Ranto <branto@redhat.com>
(cherry picked from commit c0980af3c72f01e6f99fd1e7e91c446934d6d856)

Conflicts:
	src/init-rbdmap
            Trivial resolution.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -870,6 +870,7 @@ if(${WITH_RBD})
     ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS} ${TCMALLOC_LIBS})
   install(TARGETS rbd DESTINATION bin)
   install(PROGRAMS ${CMAKE_SOURCE_DIR}/src/ceph-rbdnamer DESTINATION bin)
+  install(PROGRAMS ${CMAKE_SOURCE_DIR}/src/rbdmap DESTINATION bin)
 
   set(librbd_replay_types_srcs
       rbd_replay/ActionTypes.cc)
