cmake: Redid allocator checks, built rocksdb
Rewrote logic for checking allocators and made
tcmalloc work by default.

Have rocksdb building statically as an external
project.

Added FIND_HANDLE_PACKAGE_STANDARD_ARGS to
Findxio.cmake.

Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,7 +216,8 @@ endif(CRYPTOPP_FOUND)
 
 option(WITH_XIO "Enable XIO messaging" ON)
 if(WITH_XIO)
-find_package(xio)
+  #should be required but Melanox OFED drivers arent supported on fedora 22
+  find_package(xio)
 set(HAVE_XIO ${Xio_FOUND})
 endif(WITH_XIO)
 
