--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -13,13 +13,6 @@ add_executable(test_signal_handlers
 target_link_libraries(test_signal_handlers global ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS}
   ${ALLOC_LIBS})
 
-# test_msgr
-add_executable(test_msgr
-  testmsgr.cc
-  $<TARGET_OBJECTS:heap_profiler_objs>
-  )
-target_link_libraries(test_msgr global ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS} ${ALLOC_LIBS})
-
 # test_crypt
 add_executable(test_crypto
   testcrypto.cc
@@ -34,6 +27,24 @@ target_link_libraries(test_crypto
   ${CMAKE_DL_LIBS}
   ${ALLOC_LIBS}
   )
+
+add_executable(test_build_libcommon buildtest_skeleton.cc)
+target_link_libraries(test_build_libcommon common pthread ${CRYPTO_LIBS} ${EXTRALIBS})
+
+add_executable(test_build_librgw buildtest_skeleton.cc)
+target_link_libraries(test_build_librgw rgw_a global pthread ${CRYPTO_LIBS} ${EXTRALIBS})
+
+# From src/test/Makefile-client.am: I dont get this one... testing the osdc build but link in libcephfs?
+add_executable(test_build_libcephfs
+  buildtest_skeleton.cc
+  ${osdc_srcs})
+target_link_libraries(test_build_libcephfs cephfs expat pthread ${CRYPTO_LIBS} ${EXTRALIBS})
+
+add_executable(test_build_librados
+  buildtest_skeleton.cc
+  ${librados_srcs}
+  )
+target_link_libraries(test_build_librados librados pthread ${CRYPTO_LIBS} ${EXTRALIBS} osdc osd os common cls_lock_client ${BLKID_LIBRARIES} ${ALLOC_LIBS})
 
 # test_rados
 add_executable(test_rados 
@@ -457,7 +468,6 @@ add_executable(unittest_encoding EXCLUDE_FROM_ALL
   )
 add_test(unittest_encoding unittest_encoding)
 add_dependencies(check unittest_encoding)
-#target_link_libraries(unittest_encoding librados global ${Boost_FILESYSTEM_LIBRARY}
 target_link_libraries(unittest_encoding cephfs librados pthread rt m ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS} ${ALLOC_LIBS} ${UNITTEST_LIBS})
 set_target_properties(unittest_encoding
   PROPERTIES COMPILE_FLAGS ${UNITTEST_CXX_FLAGS})
@@ -1601,6 +1611,15 @@ add_executable(multi_stress_watch
 target_link_libraries(multi_stress_watch librados global radostest
   ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS} ${ALLOC_LIBS})
 
+set(librados_test_stub_srcs
+  librados_test_stub/LibradosTestStub.cc
+  librados_test_stub/TestClassHandler.cc
+  librados_test_stub/TestIoCtxImpl.cc
+  librados_test_stub/TestMemIoCtxImpl.cc
+  librados_test_stub/TestMemRadosClient.cc
+  librados_test_stub/TestRadosClient.cc)
+add_library(librados_test_stub STATIC ${librados_test_stub_srcs})
+  
 # unittest_librbd
 add_executable(unittest_librbd EXCLUDE_FROM_ALL
   librbd/test_librbd.cc
@@ -1622,6 +1641,8 @@ endif(${WITH_LTTNG})
 target_link_libraries(unittest_librbd
   librbd
   librados
+  librados_api
+  librados_test_stub
   ${UNITTEST_LIBS}
   global
   ${CMAKE_DL_LIBS}
@@ -1810,6 +1831,21 @@ target_link_libraries(test_cls_hello
   ${UNITTEST_LIBS}
   )
 
+add_executable(test_cls_numops cls_numops/test_cls_numops.cc)
+set_target_properties(test_cls_numops PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_cls_numops 
+  librados 
+  global
+  cls_numops_client 
+  ${EXTRALIBS}
+  ${BLKID_LIBRARIES}
+  ${ALLOC_LIBS}
+  ${CMAKE_DL_LIBS}
+  radostest
+  ${UNITTEST_LIBS} 
+  )
+
 if(${WITH_RADOSGW})
   add_executable(test_cls_rgw
     cls_rgw/test_cls_rgw.cc
@@ -1828,6 +1864,58 @@ if(${WITH_RADOSGW})
     ${CMAKE_DL_LIBS}
     radostest)
 endif(${WITH_RADOSGW})
+
+# test_async_driver
+add_executable(test_async_driver
+  msgr/test_async_driver.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+set_target_properties(test_async_driver PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_async_driver os global ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS} ${ALLOC_LIBS} ${UNITTEST_LIBS})
+
+# test_msgr
+add_executable(test_msgr
+  msgr/test_msgr.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+set_target_properties(test_msgr PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_msgr os global ${BLKID_LIBRARIES} ${CMAKE_DL_LIBS} ${ALLOC_LIBS} ${UNITTEST_LIBS})
+
+#test_mon_msg
+add_executable(test_mon_msg mon/test-mon-msg.cc)
+set_target_properties(test_mon_msg PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_mon_msg os osdc global ${UNITTEST_LIBS})
+
+#test_perf_local
+add_executable(test_perf_local 
+  perf_local.cc
+  perf_helper.cc)
+#INTEL_SSE & INTEL_SSE2 flags
+set(PERF_LOCAL_FLAGS "${CMAKE_CXX_FLAGS} -msse -msse2") 
+set_target_properties(test_perf_local PROPERTIES COMPILE_FLAGS
+  ${PERF_LOCAL_FLAGS})
+target_link_libraries(test_perf_local os global ${UNITTEST_LIBS})
+
+#test_perf_objectstore
+add_executable(test_perf_objectstore objectstore/ObjectStoreTransactionBenchmark.cc)
+set_target_properties(test_perf_objectstore PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_perf_objectstore os osdc global ${UNITTEST_LIBS})
+
+#test_perf_msgr_server
+add_executable(test_perf_msgr_server msgr/perf_msgr_server.cc)
+set_target_properties(test_perf_msgr_server PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_perf_msgr_server os global ${UNITTEST_LIBS})
+
+#test_perf_msgr_client
+add_executable(test_perf_msgr_client msgr/perf_msgr_client.cc)
+set_target_properties(test_perf_msgr_client PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_perf_msgr_client os global ${UNITTEST_LIBS})
 
 add_executable(test_mon_workloadgen
   mon/test_mon_workloadgen.cc
@@ -1960,6 +2048,38 @@ set_target_properties(test_rados_api_lock PROPERTIES COMPILE_FLAGS
 target_link_libraries(test_rados_api_lock
   librados ${UNITTEST_LIBS} ${ALLOC_LIBS} radostest)
 
+add_executable(test_rados_api_tier
+  librados/tier.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+set_target_properties(test_rados_api_tier PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_rados_api_tier
+  global librados ${UNITTEST_LIBS} ${ALLOC_LIBS} ${Boost_SYSTEM_LIBRARY} radostest)
+
+add_executable(test_rados_api_snapshots
+  librados/snapshots.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+set_target_properties(test_rados_api_snapshots PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_rados_api_snapshots
+  librados ${UNITTEST_LIBS} ${ALLOC_LIBS} radostest)
+
+add_library(rados_striper_test STATIC libradosstriper/TestCase.cc)
+target_link_libraries(rados_striper_test radostest)
+set_target_properties(rados_striper_test PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+
+add_executable(test_rados_api_striping
+  libradosstriper/striping.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+target_link_libraries(test_rados_api_striping librados libradosstriper 
+  ${UNITTEST_LIBS} ${ALLOC_LIBS} rados_striper_test)
+set_target_properties(test_rados_api_striping PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+
 if(${WITH_CEPHFS})
   add_executable(test_libcephfs
     libcephfs/test.cc
@@ -2027,6 +2147,12 @@ target_link_libraries(test_objectstore_workloadgen
   ${ALLOC_LIBS}
   ${CMAKE_DL_LIBS}
   )
+
+#test_filestore
+add_executable(test_filestore filestore/TestFileStore.cc)
+set_target_properties(test_filestore PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_filestore os global ${UNITTEST_LIBS})
 
 add_executable(test_filestore_idempotent
   objectstore/test_idempotent.cc
