--- a/src/global/Makefile.am
+++ b/src/global/Makefile.am
@@ -2,7 +2,8 @@ libglobal_la_SOURCES = \
 	global/global_context.cc \
 	global/global_init.cc \
 	global/pidfile.cc \
-	global/signal_handler.cc
+	global/signal_handler.cc \
+	global/error_handlers.cc
 libglobal_la_LIBADD = $(LIBCOMMON)
 noinst_LTLIBRARIES += libglobal.la
 
@@ -10,5 +11,5 @@ noinst_HEADERS += \
 	global/pidfile.h \
 	global/global_init.h \
 	global/global_context.h \
-	global/signal_handler.h
-
+	global/signal_handler.h \
+	global/error_handlers.h
