--- a/suites/krbd/rbd/tasks/rbd_fio.yaml
+++ b/suites/krbd/rbd/tasks/rbd_fio.yaml
@@ -6,7 +6,7 @@ tasks:
        fio-version: 2.2.9
        fio-io-size: 90%
        formats: [2]
-       features: [1, 2]
+       features: [[layering],[striping]]
        io-engine: sync
        rw: randrw
        runtime: 900
