--- a/suites/rbd/librbd/workloads/rbd_fio.yaml
+++ b/suites/rbd/librbd/workloads/rbd_fio.yaml
@@ -4,7 +4,7 @@ tasks:
       fio-version: 2.2.9
       fio-io-size: 80%
       formats: [2]
-      features: [1,13]
+      features: [[layering],[layering,exclusive-lock,object-map]]
       io-engine: rbd
       test-clone-io: 1
       rw: randrw
