os: write EIO error, signal osd to shutdown other than assert directly
        assert directly will cost cluster too long to be normal, but if notify
        monitor to mark me down before exit will let cluster recover faster!

        test:
        have tested by unpin the disk, cluster write latency very very little
        compared to just assert and exit.

Signed-off-by: Xiaowei Chen <chen.xiaowei@h3c.com>

--- a/src/global/Makefile.am
+++ b/src/global/Makefile.am
@@ -3,7 +3,8 @@ libglobal_la_SOURCES = \
 	global/global_init.cc \
 	global/pidfile.cc \
 	global/signal_handler.cc \
-	common/TrackedOp.cc
+	common/TrackedOp.cc \
+	global/error_handlers.cc
 libglobal_la_LIBADD = $(LIBCOMMON)
 noinst_LTLIBRARIES += libglobal.la
 
@@ -11,5 +12,6 @@ noinst_HEADERS += \
 	global/pidfile.h \
 	global/global_init.h \
 	global/global_context.h \
-	global/signal_handler.h
+	global/signal_handler.h \
+	global/error_handlers.h
 
