ceph.conf: filstore {ondisk,apply} finisher threads = 3
Exercise new finisher sharding in qa.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/teuthology/ceph.conf.template
+++ b/teuthology/ceph.conf.template
@@ -44,6 +44,9 @@
 
 	osd map max advance = 10
 
+	filestore ondisk finisher threads = 3
+	filestore apply finisher threads = 3
+
 [mon]
 	debug ms = 1
 	debug mon = 20
