Fixed segfault in WrrQueue. Made PrioritizedQueue a derrived class of OpQueue.

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -155,6 +155,7 @@ noinst_HEADERS += \
 	common/Preforker.h \
 	common/SloppyCRCMap.h \
 	common/WorkQueue.h \
+	common/OpQueue.h \
 	common/PrioritizedQueue.h \
 	common/WrrQueue.h \
 	common/ceph_argparse.h \
