build/ops: rbd-replay moved from ceph-test-dbg to ceph-common-dbg
http://tracker.ceph.com/issues/13785 Fixes: #13785

Signed-off-by: Loic Dachary <loic@dachary.org>
(cherry picked from commit a0204dc47acc0c50223e449fd23a2fc97bfd111a)

    Conflicts:
    	debian/control: << 0.94.5-2 is appropriate for hammer

--- a/debian/control
+++ b/debian/control
@@ -208,7 +208,9 @@ Package: ceph-common-dbg
 Architecture: linux-any
 Depends: ceph-common (= ${binary:Version}), ${misc:Depends}
 Conflicts: ceph-client-tools-dbg
-Replaces: ceph-client-tools-dbg
+Replaces: ceph-client-tools-dbg,
+	  ceph-test-dbg (<< 0.94.5-2)
+Breaks: ceph-test-dbg (<< 0.94.5-2)
 Section: debug
 Priority: extra
 Description: debugging symbols for ceph-common
