cmake: kv reorg
Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -248,6 +248,17 @@ if(${HAVE_BABELTRACE})
   set(HAVE_BABELTRACE_CTF_EVENTS_H ${BABELTRACE_FOUND})
 endif(${HAVE_BABELTRACE})
 
+find_package(ZLIB REQUIRED)
+find_package(BZip2 REQUIRED)
+
+#add external project for kinetic_client?
+option(WITH_KINTETIC "Seagate Kinetic Client library enabled" OFF)
+if(${WITH_KINETIC})
+  find_package(protobuf REQUIRED)
+  find_package(gflags REQUIRED)
+  find_package(glog REQUIRED)
+endif(${WITH_KINETIC})
+
 # Now create a useable config.h
 configure_file(
   ${PROJECT_SOURCE_DIR}/src/include/config-h.in.cmake
