cmake: Kinetic taken out, minor library linking fixes
Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -408,7 +408,7 @@ target_link_libraries(librados PRIVATE osdc osd os global common cls_lock_client
   ${BLKID_LIBRARIES}
   ${CRYPTO_LIBS} ${EXTRALIBS} ${ALLOC_LIBS})
 if(${WITH_LTTNG})
-  target_link_libraries(librados PRIVATE librados_tp)
+  target_link_libraries(librados PUBLIC librados_tp)
 endif(${WITH_LTTNG})
 if(${ENABLE_SHARED})
   set_target_properties(librados PROPERTIES OUTPUT_NAME rados VERSION 2.0.0
@@ -952,10 +952,10 @@ if(${WITH_RBD})
   add_library(librbd ${CEPH_SHARED} ${librbd_srcs}
     $<TARGET_OBJECTS:osdc_rbd_objs>
     $<TARGET_OBJECTS:common_util_obj>)
-  target_link_libraries(librbd PRIVATE librados common cls_lock_client cls_rbd_client
+  target_link_libraries(librbd PRIVATE librados common cls_lock_client journal cls_journal_client cls_rbd_client
     ${CMAKE_DL_LIBS})
   if(${WITH_LTTNG})
-    target_link_libraries(librbd PRIVATE librbd_tp)
+    target_link_libraries(librbd PUBLIC librbd_tp)
   endif(${WITH_LTTNG})
   if(${ENABLE_SHARED})
     set_target_properties(librbd PROPERTIES VERSION "1.0.0" SOVERSION "1"
