--- a/src/kv/CMakeLists.txt
+++ b/src/kv/CMakeLists.txt
@@ -1,13 +1,9 @@
 set(kv_srcs
   KeyValueDB.cc
-  RocksDBStore.cc
   LevelDBStore.cc)
-#if(${WITH_ROCKSDB})
-  #list(APPEND kv_srcs RocksDBStore.cc)
-  #endif(${WITH_ROCKSDB})
-if(${WITH_KINETIC})
-  list(APPEND kv_srcs KineticStore.cc)
-endif(${WITH_KINETIC})
+if(${WITH_ROCKSDB})
+  list(APPEND kv_srcs RocksDBStore.cc)
+endif(${WITH_ROCKSDB})
 add_library(kv_objs OBJECT ${kv_srcs})
 add_library(kv STATIC ${kv_srcs})
 target_include_directories(kv_objs PUBLIC ${CMAKE_SOURCE_DIR}/src/rocksdb/include)
@@ -16,8 +12,3 @@ target_link_libraries(kv bz2 z leveldb snappy)
 if(${WITH_ROCKSDB})
   target_link_libraries(kv librocksdb)
 endif(${WITH_ROCKSDB})
-#will add kinetic search later
-if(${WITH_KINETIC})
-  target_link_libraries(kv kinetic_client protobuf glog gflags ${CRYPTO_LIBS})
-endif(${WITH_KINETIC})
-
