openstack: convert to array hints
So that it is more flexible.

http://tracker.ceph.com/issues/13581 Fixes: #13581

Signed-off-by: Loic Dachary <loic@dachary.org>
(cherry picked from commit 8f2af5949c8ed4e24cedd8a6df0d169733e14926)

Conflicts:
	suites/smoke/1node/clusters/openstack.yaml (does not exist)

--- a/suites/ceph-deploy/basic/tasks/ceph-deploy_hello_world.yaml
+++ b/suites/ceph-deploy/basic/tasks/ceph-deploy_hello_world.yaml
@@ -15,13 +15,13 @@ roles:
   - mon.b
   - client.0
 openstack:
-  machine:
-    disk: 10 # GB
-    ram: 2000 # MB
-    cpus: 1
-  volumes: # attached to each instance
-    count: 3
-    size: 10 # GB
+  - machine:
+      disk: 10 # GB
+      ram: 2000 # MB
+      cpus: 1
+    volumes: # attached to each instance
+      count: 3
+      size: 10 # GB
 tasks:
 - install:
      extras: yes
