--- a/suites/rados/objectstore/alloc-hint.yaml
+++ b/suites/rados/objectstore/alloc-hint.yaml
@@ -16,10 +16,10 @@ tasks:
       all:
         - rados/test_alloc_hint.sh
 openstack:
-  machine:
-    disk: 40 # GB
-    ram: 8000 # MB
-    cpus: 1
-  volumes: # attached to each instance
-    count: 3
-    size: 10 # GB
+  - machine:
+      disk: 40 # GB
+      ram: 8000 # MB
+      cpus: 1
+    volumes: # attached to each instance
+      count: 3
+      size: 10 # GB
