--- a/suites/rados/singleton-nomsgr/all/msgr.yaml
+++ b/suites/rados/singleton-nomsgr/all/msgr.yaml
@@ -7,10 +7,10 @@ tasks:
           - ceph_test_async_driver
           - ceph_test_msgr
 openstack:
-  machine:
-    disk: 40 # GB
-    ram: 15000 # MB
-    cpus: 1
-  volumes: # attached to each instance
-    count: 0
-    size: 1 # GB
+  - machine:
+      disk: 40 # GB
+      ram: 15000 # MB
+      cpus: 1
+    volumes: # attached to each instance
+      count: 0
+      size: 1 # GB
