--- a/suites/fs/basic/tasks/cfuse_workunit_kernel_untar_build.yaml
+++ b/suites/fs/basic/tasks/cfuse_workunit_kernel_untar_build.yaml
@@ -5,10 +5,10 @@ tasks:
       all:
         - kernel_untar_build.sh
 openstack:
-  machine:
-    disk: 100 # GB
-    ram: 8000 # MB
-    cpus: 1
-  volumes: # attached to each instance
-    count: 3
-    size: 30 # GB
+  - machine:
+      disk: 100 # GB
+      ram: 8000 # MB
+      cpus: 1
+    volumes: # attached to each instance
+      count: 3
+      size: 30 # GB
